--- a/react-vite-hatvp-dataviz/package.json
+++ b/react-vite-hatvp-dataviz/package.json
@@ -13,6 +13,7 @@
     "d3": "^7.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.0",
     "recharts": "^3.1.2"
   },
   "devDependencies": {
